--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-multi-carousel": "^2.6.3"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
